// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datafile details panel component renders correctly 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="datafile-details-tabs"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="datafile-details-panel"
      id="datafile-details-tab"
      label="Datafile Details"
      value="details"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="datafile-details-tab"
    hidden={false}
    id="datafile-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        Name:
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        Description:
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        Location:
      </b>
       
      /test/location
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;

exports[`Datafile details panel component renders parameters tab when present in the data 1`] = `
<div>
  <WithStyles(ForwardRef(Tabs))
    aria-label="datafile-details-tabs"
    onChange={[Function]}
    value="details"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="datafile-details-panel"
      id="datafile-details-tab"
      label="Datafile Details"
      value="details"
    />
    <WithStyles(ForwardRef(Tab))
      aria-controls="datafile-parameters-panel"
      id="datafile-parameters-tab"
      label="Datafile Parameters"
      value="parameters"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="datafile-details-tab"
    hidden={false}
    id="datafile-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        Name:
      </b>
       
      Test 1
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        Description:
      </b>
       
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      variant="body2"
    >
      <b>
        Location:
      </b>
       
      /test/location
    </WithStyles(ForwardRef(Typography))>
  </div>
  <div
    aria-labelledby="datafile-parameters-tab"
    hidden={true}
    id="datafile-parameters-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Typography))
      key="2"
      variant="body2"
    >
      <b>
        String parameter
        :
      </b>
       
      String test
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      key="4"
      variant="body2"
    >
      <b>
        Numeric parameter
        :
      </b>
       
      1337
    </WithStyles(ForwardRef(Typography))>
    <WithStyles(ForwardRef(Typography))
      key="6"
      variant="body2"
    >
      <b>
        Datetime parameter
        :
      </b>
       
      2019-09-10
    </WithStyles(ForwardRef(Typography))>
  </div>
</div>
`;
